@@ -45,6 +45,7 @@ The following bugs are resolved with this release:
   [28349] libc: Segfault for ping -R on qemux86 caused by recvmsg()
   [28350] libc: ping receives SIGABRT on lib32-qemux86-64 caused by
     recvmsg()
+  [28353] Race condition in __opensock
   [28357] deadlock between pthread_create and ELF constructors
   [28361] nptl: Avoid setxid deadlock with blocked signals in thread exit
   [28407] pthread_kill assumes that kill and tgkill are equivalent
